# Outframe

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
docs/: CLEAN_ROOM.md  DEPENDENCIES.md  ROADMAP.md
src/: main.cpp
src/app/: FpsgradeApp.cpp  FpsgradeApp.h  OutframeApp.cpp  OutframeApp.h
src/platform/: PresentationWindow.cpp  PresentationWindow.h  Win32Window.cpp  Win32Window.h  WindowInfo.cpp  WindowInfo.h
